# FilteringCV

./: .dockerignore  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: example.yaml
cv_preprocess/: __init__.py  __main__.py  cli.py
cv_preprocess/audio/: __init__.py  asr_batch.py  asr_transcribe_worker.py  binary_runs.py  dasheng_denoise.py  decode.py  deepfilternet_torchaudio_shim.py  denoise.py  diff_click_repair.py  edge_ui_click.py  filters.py  hifigan_bwe.py  lip_noise.py  lip_noise_repair.py  mfa_batch.py  nfa_align_worker.py  nfa_batch.py  normalize_audio.py  pipeline.py  quality_gate.py  resample.py  sgmse_dereverb.py  sidon_restore.py  snr.py  textgrid_phones.py  trim_silence.py  wpe_deepfilternet_denoise.py
cv_preprocess/config/: __init__.py  align_gates.py  asr_gate.py  audio_steps.py  aux_pipelines.py  denoise_step.py  gates_quality.py  input.py  loader.py  output_split.py  pipeline.py  text.py
cv_preprocess/io/: __init__.py  alignment_phoneme_manifest.py  tsv_loader.py
cv_preprocess/pipeline/: __init__.py  dataset_partition.py  export.py  g2p_map_suggest_core.py  ljspeech_tsv.py  mfa_g2p_map_suggest.py  nfa_g2p_map_suggest.py  nfa_g2p_map_suggest_pipeline.py  phoneme_manifest.py  preprocess_efficiency.py  scan.py  secondary.py  split.py  token_map_suggest.py
cv_preprocess/pipeline/preprocess/: __init__.py  asr_gate_apply.py  clip_accept.py  helpers.py  run.py  session.py  session_flush_mixin.py  session_report_mixin.py  session_row.py  two_pass.py  types.py
cv_preprocess/report/: __init__.py
cv_preprocess/text/: __init__.py  language_detect.py  mfa_token_map.py  mora_estimate.py  normalize.py  phoneme_compare.py  phonemize.py
docs/: 仕様.md  追加仕様.md  開発環境.md  音素品質フィルタ拡張仕様.md  音素照合マニフェスト.md
tests/: test_alignment_phoneme_manifest.py  test_asr_gate_apply.py  test_asr_gate_config.py  test_char_compare.py  test_clip_accept_speaker_cap.py  test_clip_metadata_filter.py  test_config_load.py  test_dataset_partition.py  test_denoise.py  test_diff_click_repair.py  test_edge_lead_trim.py  test_edge_trim.py  test_lip_noise.py  test_ljspeech_tsv.py  test_mfa_cli_available.py  test_mfa_g2p_map_suggest.py  test_mfa_gate_config.py  test_mfa_prefilter.py  test_mfa_token_map.py  test_mora_estimate.py  test_nfa_ctm_parse.py  test_nfa_final_quality_gate.py  test_nfa_g2p_map_suggest.py  test_nfa_gate_config.py  test_normalize.py  test_phoneme_alignment_config.py  test_phoneme_compare.py  test_phoneme_dataset_g2p.py  test_phoneme_manifest.py  test_post_spectral_edge_ui_click.py  test_preprocess_efficiency.py  test_quality_gate_mora.py  test_quality_gate_prefilter_reuse.py  test_quality_gate_profiles.py  test_quality_gate_tier.py  test_secondary_pipeline.py  test_sidon_after_enhance_split.py  test_sidon_restore_pipeline_step.py  test_speaker_merge.py  test_split.py  (+5 more)
